--- a/src/css/Weather.css
+++ b/src/css/Weather.css
@@ -6,19 +6,26 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.Weather {
+.Weather, .form-control, .btn {
     border: 1px solid #31255a;
+}
+
+.Weather {
     padding: 16px;
     margin: 30px auto;
     border-radius: 4px;
 }
-.Weather form {
+
+form {
     margin-bottom: 20px;
 }
 
-.Weather h1 {
+.btn {
+    background-color: #75b4e3;
+}
+
+h1 {
     line-height: 40px;
-    opacity: 75%;
     margin: 20px 0 0;
 }
 
@@ -27,8 +34,11 @@ body {
     padding: 0;
 }
 
-.Weather li {
+.Weather li, .unit {
     font-size: 16px;
+}
+
+.Weather li {
     font-weight: 100;
     line-height: 20px;
     list-style: none;
@@ -47,7 +57,6 @@ body {
 }
 
 .Weather .unit {
-    font-size: 16px;
     font-weight: 400;
     position: relative;
     top: -30px;
